fix: dynamic page height on mobile (height navigation bar)

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -37,7 +37,7 @@
     }
   }
   .Body {
-    height: calc(100vh - 60px);
+    height: calc(100dvh - 60px);
     position: relative;
   }
 }
